# Book_Recommender_System_KNN

./: .gitignore  README.md  book_recommender_system_cse488.py  pyproject.toml
scripts/: run_demo.py
src/book_recommender/: __init__.py  cli.py  config.py  data_loader.py  recommender.py
tests/: test_recommender.py
