[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "book-recommender-system-knn"
version = "0.1.0"
description = "k-NN based book recommendation project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
